trigger docker images develop job from deployment package job
This was the original intent, but it was missed somewhere along the way.

--- a/jobs/ep-jobs.yml
+++ b/jobs/ep-jobs.yml
@@ -21,6 +21,9 @@
 
     triggers:
       - github
+      - reverse:
+            jobs: give-ep-deployment-package-deploy-develop
+            result: SUCCESS
 
     builders:
       - maven-target:
