--- a/jobs/jobs.yml
+++ b/jobs/jobs.yml
@@ -135,6 +135,13 @@
       - 'rails-template'
 
 - project:
+    name: mpdx_api
+    description-intro: Builds, tests, & deploys the MPDX API docker image.
+    email-recipients: josh.starcher@cru.org, dave.raffensperger@cru.org, spencer.oberstadt@cru.org, tataihono.nikora@cru.org
+    jobs:
+      - 'rails-template'
+
+- project:
     name: ministry_locator
     description-intro: Builds, tests, & deploys the ministry locator docker image.
     email-recipients: josh.starcher@cru.org, spencer.oberstadt@cru.org
