remove Dave Hughes from the job failure email list
Xumak has left the project.

--- a/jobs/ep-jobs.yml
+++ b/jobs/ep-jobs.yml
@@ -127,7 +127,7 @@
 
     reporters:
       - email: &typicalEmail
-          recipients: 'matt.drees@cru.org, dhughes@xumak.com'
+          recipients: 'matt.drees@cru.org'
           send-to-individuals: true
 
 - job:
