Add 2 more rails jobs

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -135,6 +135,13 @@
       - 'rails-template'
 
 - project:
+    name: mpdx_api
+    description-intro: Builds, tests, & deploys the MPDX API docker image.
+    email-recipients: josh.starcher@cru.org, spencer.oberstadt@cru.org, tataihono.nikora@cru.org
+    jobs:
+      - 'rails-template'
+
+- project:
     name: ministry_locator
     description-intro: Builds, tests, & deploys the ministry locator docker image.
     email-recipients: josh.starcher@cru.org, spencer.oberstadt@cru.org
@@ -179,6 +186,13 @@
 - project:
     name: rideshare
     description-intro: Builds, tests, & deploys the rideshare docker image.
+    jobs:
+      - 'rails-template'
+
+- project:
+    name: staff-conf-onsite
+    description-intro: Builds, tests, & deploys the staff conference onsite docker image.
+    email-recipients: josh.starcher@cru.org
     jobs:
       - 'rails-template'
 
