--- a/jobs/java-docker-jobs.yml
+++ b/jobs/java-docker-jobs.yml
@@ -149,13 +149,13 @@
 
     maven:
       root-pom: pom.xml
-      goals: 'clean package docker:build -Dimage.tag=${{GIT_COMMIT}}-${{BUILD_NUMBER}} -P CI -DskipTests'
+      goals: 'clean package -Dimage.tag=${GIT_COMMIT}-${BUILD_NUMBER} -P CI -DskipTests'
       post-step-run-condition: SUCCESS
 
     postbuilders:
       - shell: |
-          docker push cruglobal/{name}:${{GIT_COMMIT}}-${{BUILD_NUMBER}};
-          docker rmi cruglobal/{name}:${{GIT_COMMIT}}-${{BUILD_NUMBER}};
+          docker push 056154071827.dkr.ecr.us-east-1.amazonaws.com/{name}:${{GIT_COMMIT}}-${{BUILD_NUMBER}};
+          docker rmi 056154071827.dkr.ecr.us-east-1.amazonaws.com/{name}:${{GIT_COMMIT}}-${{BUILD_NUMBER}};
 
     wrappers:
       - build-name:
